# radarays_gazebo_plugins

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/radarays_gazebo_plugins/: radarays_embree_gzplugin.h  radarays_embree_ros_gzplugin.h  radarays_optix_gzplugin.h  radarays_optix_ros_gzplugin.h
launch/: example_robot.launch  example_static.launch
src/: radarays_embree_gzplugin.cpp  radarays_embree_gzregister.cpp  radarays_embree_ros_gzplugin.cpp  radarays_optix_gzplugin.cpp  radarays_optix_gzregister.cpp  radarays_optix_ros_gzplugin.cpp
urdf/: robot_radar_cpu.urdf.xacro  robot_radar_gpu.urdf.xacro  static_radar_cpu.urdf.xacro
worlds/: avz_collada.world
